v0.1 - 22/12/2010

* First release

v0.2 - 13/1/2011

* Audio degrades without error in IE
* .detach() method to undo the effects of .attach()
* Objects will detach on remove event
* Sprite maps can take optional padding values for maps with padding around objects
* Fixed a typeahead bug with controls component
* Onload functions that will be called as soon as Crafty.init() is called
* Support object to detect support for HTML5 features and others
* Loader to load assets before the game starts.